; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/metadata/extr_distobject.c_ObjectExists.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/metadata/extr_distobject.c_ObjectExists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@AccessShareLock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ObjectExists(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = icmp eq %struct.TYPE_3__* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %34

9:                                                ; preds = %1
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i64 @is_objectclass_supported(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %33

15:                                               ; preds = %9
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @AccessShareLock, align 4
  %20 = call i32 @heap_open(i32 %18, i32 %19)
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* %5, align 4
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32* (i32, i32, ...) @get_catalog_object_by_oid(i32 %21, i32 %24)
  store i32* %25, i32** %4, align 8
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* @AccessShareLock, align 4
  %28 = call i32 @heap_close(i32 %26, i32 %27)
  %29 = load i32*, i32** %4, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %32

31:                                               ; preds = %15
  store i32 1, i32* %2, align 4
  br label %34

32:                                               ; preds = %15
  store i32 0, i32* %2, align 4
  br label %34

33:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %34

34:                                               ; preds = %33, %32, %31, %8
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i64 @is_objectclass_supported(i32) #1

declare dso_local i32 @heap_open(i32, i32) #1

declare dso_local i32* @get_catalog_object_by_oid(i32, i32, ...) #1

declare dso_local i32 @heap_close(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
